<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EdadCanina">
    <ImageView
        android:layout_width="match_parent"
        android:src="@drawable/dogoargentino"
        android:adjustViewBounds="true"
        android:layout_height="wrap_content"/>



    <TextView
        android:id="@+id/TextoPregunta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/que_edad_tienes"
        android:textSize="24sp"
        android:textColor="@color/miAzul"
        android:padding="24dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/InputEdad"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="24dp"
        android:ems="10"
        android:hint="@string/por_ejemplo_18_o_75"
        android:gravity="center"
        android:inputType="number"
        android:backgroundTint="@color/miAzul"
        android:layout_height="wrap_content">
    </EditText>

    <Button
        android:id="@+id/BotonCalcular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginVertical="16dp"
        android:backgroundTint="@color/miAzul"
        android:textSize="24sp"
        android:text="@string/calcular" />

    <TextView
        android:id="@+id/TextoRespuesta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@string/textoRespuesta"
        android:textSize="24sp"
        android:textColor="@color/miAzul"
        android:padding="22dp"
        android:textStyle="bold" />

</LinearLayout>